# noise-mobile-rs

./: .gitignore  ARCHITECTURE.md  BENCHMARK_RESULTS.md  CLAUDE.md  CURRENT_STATUS.md  CURRENT_STATUS_UPDATE.md  Cargo.toml  FFI_GUIDE.md  HANDOFF_COMPLETE.md  HANDOFF_NOTES.md  HANDOFF_SESSION4_COMPLETE.md  HANDOFF_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PLAN.md  LICENSE-MIT  PROJECT_COMPLETE.md  README.md  SESSION3_HANDOFF.md  SESSION3_SUMMARY.md  SESSION4_HANDOFF.md  TECHNICAL_DETAILS_SESSION3.md  TECHNICAL_DETAILS_SESSION4.md  TESTING_STRATEGY.md  TODO.md  TODO_SESSION3.md  TODO_SESSION4_COMPLETE.md  TODO_UPDATED.md  build-android.sh  build-ios.sh  cbindgen.toml
benches/: noise_benchmarks.rs
docs/: benchmarks.md  security.md
examples/android/: README.md  build.gradle  settings.gradle  setup.sh
examples/android/app/: build.gradle
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: CMakeLists.txt
examples/android/app/src/main/jni/: noise_jni.c
examples/android/app/src/main/res/layout/: activity_main.xml
examples/android/app/src/main/res/values/: strings.xml  themes.xml
examples/ios/: Package.swift  README.md  setup.sh
examples/ios/Sources/: BLENoiseTransport.swift  ExampleApp.swift  NoiseMobile-Bridging-Header.h  NoiseSession.swift
include/: noise_mobile.h
src/: lib.rs
src/core/: crypto.rs  error.rs  mod.rs  session.rs
src/ffi/: c_api.rs  helpers.rs  mod.rs  types.rs
src/mobile/: battery.rs  mod.rs  network.rs  storage.rs
tests/: ffi_tests.rs  integration_tests.rs  security_tests.rs
(+3 files in other folders)
