[package]
name = "noise-mobile-rust"
version = "0.1.0"
edition = "2021"
authors = ["BitChat Team"]
description = "Mobile-optimized Rust library for the Noise Protocol Framework"
repository = "https://github.com/permissionlesstech/noise-mobile-rust"
license = "MIT OR Apache-2.0"
keywords = ["noise", "protocol", "crypto", "mobile", "ffi"]
categories = ["cryptography", "network-programming"]

[lib]
name = "noise_mobile"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
snow = "0.10.0-beta.2"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"
libc = "0.2"

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
# Enable hardware crypto acceleration
hardware-crypto = []

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
